[tool.poetry]
name = "youtubewise"
version = "0.1.0"
description = ""
authors = ["Viraj Patil <virajpatil0808@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
youtube-transcript-api = "^0.6.2"
gradio = "^5.29.0"
openai = "^1.35.3"
pytube = "^15.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
